--- a/src/Raven.Studio/wwwroot/App/views/resources/serverDashboard.html
+++ b/src/Raven.Studio/wwwroot/App/views/resources/serverDashboard.html
@@ -243,7 +243,7 @@
                     <div class="flex-horizontal">
                         <h3 class="panel-title"><i class="icon-storage"></i><span>STORAGE</span></h3>
                         <div class="flex-separator"></div>
-                        <div class="toggle toggle-right">
+                        <div class="toggle toggle-right input-xs">
                             <input id="include-temp" class="styled" type="checkbox" data-bind="checked: includeTemporaryBuffers">
                             <label for="include-temp" class="properties-label">
                                 Include temporary buffers
