RavenDB-11813 Remove name field from replace cluster cert view

--- a/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
@@ -223,7 +223,7 @@
                             </small>
                         </div>
                         <div class="flex-form">
-                            <div class="form-group" data-bind="validationElement: name">
+                            <div class="form-group" data-bind="validationElement: name, visible: mode() !== 'replace'">
                                 <label class="control-label">
                                     Name
                                 </label>
