RavenDB-11854 Encrypted db - misplaced padlock icon

--- a/src/Raven.Studio/wwwroot/App/views/manage/cluster.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/cluster.html
@@ -145,7 +145,7 @@
                                 </div>
                                 <div class="flex-separator"></div>
                                 <span class="margin margin-right" data-bind="visible: errorDetailsShort() !== errorDetails()">
-                                    <a href="#" data-bind="click: _.partial($root.showErrorDetails, tag())">Show details</a>
+                                    <a href="#" data-bind="click: _.partial($root.showErrorDetails, tag())"><small>Show details</small></a>
                                 </span>
                             </div>
                             <div data-bind="visible: !errorDetailsShort()">
