--- a/src/Raven.Studio/wwwroot/App/views/resources/serverDashboard.html
+++ b/src/Raven.Studio/wwwroot/App/views/resources/serverDashboard.html
@@ -36,8 +36,8 @@
                     <div class="panel-heading">
                         <h3 class="panel-title"><i class="icon-processor"></i> <span>CPU & MEMORY</span> </h3>
                     </div>
-                    <div class="panel-body">
-                        <div class="infogrid">
+                    <div class="panel-body flex-horizontal flex-stretch-items">
+                        <div class="infogrid flex-grow">
                             <div class="infogrid-label">
                                 <div class="absolute-center loading" data-bind="visible: $root.spinners.loading"><div class="global-spinner"></div></div>
                                 <div data-bind="with: resources">
