--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/type.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/type.less
@@ -102,6 +102,10 @@ mark,
 .text-muted {
   color: @text-muted;
 }
+.text-black {
+    .text-emphasis-variant(@gray-base);
+}
+
 .text-gray {
   .text-emphasis-variant(@gray);
 }
