RavenDB-11859 Missing right padding in inline editor in import from sql

--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -96,6 +96,12 @@
         color: @raven-field-color;
     }
 
+    .panel-heading {
+        .inline-edit {
+            padding-right: 30px;
+        }
+    }
+
     .panel-header {
 
         .icon-arrow-right {
