RavenDB-11921 - Add patch script info for counters

--- a/src/Raven.Studio/wwwroot/App/views/database/patch/patchSyntax.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/patch/patchSyntax.html
@@ -42,6 +42,9 @@
                     <li><code>put(documentId, document)</code> - puts document with given name and data</li>
                     <li><code>load(documentIdToLoad)</code> - loads document by ID</li>
                     <li><code>del(documentIdToRemove)</code> - deletes document by ID</li>
+                    <li><code>incrementCounter(document/documentId, name, value = 1)</code> - increment a counter by document/document ID</li>
+                    <li><code>counter(document/documentId, name)</code> - get the counter value by document/document ID</li>
+                    <li><code>deleteCounter(document/documentId, name)</code> - delete a counter by document/document ID</li>
                     <li><code>output(message)</code> - allows to output debug info when testing patches</li>
                 </ul>
            </div>
